--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,5 @@
-@use '../scss/custom';
+@import "custom";
+@import "../node_modules/bootstrap/scss/bootstrap";
+@import "../node_modules/bootstrap-icons/font/bootstrap-icons.css";
 
 
