--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,4 +2,19 @@
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import "../node_modules/bootstrap-icons/font/bootstrap-icons.css";
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+main{
+    margin-bottom: 250px;
+}
+
+footer.footer {
+    padding: 15px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
 
