--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,7 +8,7 @@ html {
 }
 
 main{
-    margin-bottom: 250px;
+    margin-bottom: 270px;
 }
 
 footer.footer {
@@ -25,6 +25,7 @@ p {
 
 .hero-scene {
     position: relative;
+    margin-bottom: 15px;
     &::before{
     content: "";    
     position: absolute;  
@@ -77,4 +78,8 @@ p {
         opacity: 0;
         transition: all 0.3s;
     }
+}
+
+.form-label {
+    color: $primary;
 }
