--- a/scss/main.css
+++ b/scss/main.css
@@ -12037,6 +12037,9 @@ p {
 .image-card:hover .titre-image {
   opacity: 1;
 }
+.image-card:hover .action-image-buttons {
+  opacity: 1;
+}
 .image-card:hover img {
   filter: brightness(0.3);
 }
@@ -12050,6 +12053,16 @@ p {
   transform: translate(-50%, -50%);
   opacity: 0;
   transition: all 0.3s;
+}
+.image-card .action-image-buttons {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  padding: 5px;
+  display: flex;
+  justify-content: space-between;
+  opacity: 0;
 }
 
 .form-label {
