--- a/scss/main.scss
+++ b/scss/main.scss
@@ -58,9 +58,10 @@ p {
 .image-card {
         position: relative;
     &:hover {
-        .titre-image {
+        .titre-image, .action-image-buttons {
             opacity: 1;
         }
+
         img {
             filter: brightness(0.3);
         }
@@ -77,6 +78,18 @@ p {
         transform: translate(-50%, -50%);
         opacity: 0;
         transition: all 0.3s;
+    }
+
+    .action-image-buttons {
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        width: 100%;
+        padding: 5px;
+        display: flex;
+        justify-content: space-between;
+        opacity: 0;
+        transform: all à.3s;
     }
 }
 
