--- a/scss/main.css
+++ b/scss/main.css
@@ -12034,10 +12034,7 @@ p {
 .image-card {
   position: relative;
 }
-.image-card:hover .titre-image {
-  opacity: 1;
-}
-.image-card:hover .action-image-buttons {
+.image-card:hover .titre-image, .image-card:hover .action-image-buttons {
   opacity: 1;
 }
 .image-card:hover img {
@@ -12063,8 +12060,15 @@ p {
   display: flex;
   justify-content: space-between;
   opacity: 0;
+  transform: all 0.3s;
 }
 
 .form-label {
   color: #906427;
+}
+
+.allreservations a {
+  display: block;
+  color: #292222;
+  padding: 10px;
 }/*# sourceMappingURL=main.css.map */
